modif network : - legende - label sur les noeuds highlight

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <h2>Visualisation 2</h2>
             <h5>Répartition des artistes associés à leur genre par labels et pour un pays</h5>
             <p class="text-justify">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-            <p><a class="btn btn-secondary" href="#" role="button">Visualisation 1 & 2 &raquo;</a></p>
+            <p><a class="btn btn-secondary" href="visuLN.html" role="button">Visualisation 1 & 2 &raquo;</a></p>
         </div>
         <div class="col-md-4">
             <h2>Visualisation 3</h2>
