--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Projet Visualisation M2 MIAGE</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
 <body>
@@ -40,7 +40,7 @@
         <div class="col-md-4">
             <h2>Visualisation 2</h2>
             <h5>Répartition des artistes associés à leur genre par labels et pour un pays</h5>
-            <p class="text-justify">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+            <p class="text-justify">Cette visualisation est un network qui va permettre associé à la dot map de mettre en évidence les liens par pays entre les artistes, leurs genres et les labels dans lesquels ils ont signé. </p>
             <p><a class="btn btn-secondary" href="visuLN.html" role="button">Visualisation 1 & 2 &raquo;</a></p>
         </div>
         <div class="col-md-4">
