Modification index.html descriptif page d'accueil

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 <div class="jumbotron">
     <div class="container">
         <h1 class="display-3">Projet Visualisation M2 MIAGE</h1>
-        <p>Dans le cadre du module de Visualisation, notre groupe de projet composé de Ashley LY, Jimmy PHOMMARATH, Nicolas POUGET, Amélie VIERON et Laure WRIGHT a réalisé différentes représentations graphiques de données statistiques.</p>
+        <p>Dans le cadre du module de Visualisation, notre groupe de projet composé de Ashley LY, Jimmy PHOMMARATH,
+            Nicolas POUGET, Amélie VIERON et Laure WRIGHT a réalisé différentes représentations graphiques de données
+            statistiques contenant diverses informations concernant des artistes dans l’industrie de la musique.</p>
     </div>
 </div>
 
