MAJ arborescence du projet

--- a/html/visuLN.html
+++ b/html/visuLN.html
@@ -36,7 +36,7 @@ and open the template in the editor.
 
             <div class="collapse navbar-collapse justify-content-md-center" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link " href="index.html">Home </a>
+                    <a class="nav-link " href="../index.html">Home </a>
                     <a class="nav-link active" href="visuLN.html">Visualisation 1 & 2<span class="sr-only">(current)</span></a>
                     <a class="nav-link" href="#">Visualisation 2 </a>
                     <a class="nav-link " href="#">Visualisation 3 </a>
@@ -106,9 +106,9 @@ and open the template in the editor.
 
         </div>
 
-        <script src="script/visualisation.js"></script>
+        <script src="../script/visualisation.js"></script>
 
-        <script src="script/networkGraph.js"></script>
+        <script src="../script/networkGraph.js"></script>
 
     </body>
 
