--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="collapse navbar-collapse justify-content-md-center" id="navbarNavAltMarkup">
         <div class="navbar-nav">
             <a class="nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-link" href="visuLN.html">Visualisation 1 & 2</a>
+            <a class="nav-link" href="html/visuLN.html">Visualisation 1 & 2</a>
             <a class="nav-link" href="#">Visualisation 2</a>
             <a class="nav-link " href="#">Visualisation 3</a>
         </div>
@@ -37,13 +37,13 @@
             <h2>Visualisation 1</h2>
             <h5>Genre dominant et nombre d'artistes par pays</h5>
             <p class="text-justify">Cette visualisation est une dot map du nombre d'artistes totaux par pays avec la possibilité de filtrer ce nombre par décennie. C'est aussi une choropleth map montrant le genre de musique le plus représenté pour chaque pays.</p>
-            <p><a class="btn btn-secondary" href="visuLN.html" role="button">Visualisation 1 & 2 &raquo;</a></p>
+            <p><a class="btn btn-secondary" href="html/visuLN.html" role="button">Visualisation 1 & 2 &raquo;</a></p>
         </div>
         <div class="col-md-4">
             <h2>Visualisation 2</h2>
             <h5>Répartition des artistes associés à leur genre par labels et pour un pays</h5>
             <p class="text-justify">Cette visualisation est un network qui va permettre associé à la dot map de mettre en évidence les liens par pays entre les artistes, leurs genres et les labels dans lesquels ils ont signé. </p>
-            <p><a class="btn btn-secondary" href="visuLN.html" role="button">Visualisation 1 & 2 &raquo;</a></p>
+            <p><a class="btn btn-secondary" href="html/visuLN.html" role="button">Visualisation 1 & 2 &raquo;</a></p>
         </div>
         <div class="col-md-4">
             <h2>Visualisation 3</h2>
