Mise en place projet parallel sets Jimmy

--- a/html/visuLN.html
+++ b/html/visuLN.html
@@ -38,8 +38,8 @@ and open the template in the editor.
                 <div class="navbar-nav">
                     <a class="nav-link " href="../index.html">Home </a>
                     <a class="nav-link active" href="visuLN.html">Visualisation 1 & 2<span class="sr-only">(current)</span></a>
-                    <a class="nav-link" href="#">Visualisation 2 </a>
-                    <a class="nav-link " href="#">Visualisation 3 </a>
+                    <a class="nav-link" href="parallel-sets.html">Visualisation 3 </a>
+                    <a class="nav-link " href="#">Visualisation 4</a>
                 </div>
             </div>
         </nav>
