--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <div class="navbar-nav">
             <a class="nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
             <a class="nav-link" href="html/visuLN.html">Visualisation 1 & 2</a>
-            <a class="nav-link" href="#">Visualisation 2</a>
-            <a class="nav-link " href="#">Visualisation 3</a>
+            <a class="nav-link" href="html/parallel-sets.html">Visualisation 3</a>
+            <a class="nav-link " href="#">Visualisation 4</a>
         </div>
     </div>
 </nav>
@@ -23,8 +23,8 @@
 <!-- Main jumbotron for a primary marketing message or call to action -->
 <div class="jumbotron">
     <div class="container">
-        <h1 class="display-3">Projet Visualisation M2 MIAGE</h1>
-        <p>Dans le cadre du module de Visualisation, notre groupe de projet composé de Ashley LY, Jimmy PHOMMARATH,
+        <h1 class="display-3 text-center">Projet Visualisation M2 MIAGE</h1>
+        <p class="text-justify">Dans le cadre du module de Visualisation, notre groupe de projet composé de Ashley LY, Jimmy PHOMMARATH,
             Nicolas POUGET, Amélie VIERON et Laure WRIGHT a réalisé différentes représentations graphiques de données
             statistiques contenant diverses informations concernant des artistes dans l’industrie de la musique.</p>
     </div>
@@ -47,25 +47,22 @@
         </div>
         <div class="col-md-4">
             <h2>Visualisation 3</h2>
-            <p class="text-justify">Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+            <h5 class="text-justify">Répartition des artistes selon la catégorie, le genre musical et les plateformes de streaming</h5>
+            <p class="text-justify">Cette visualisation est un parallel sets permettant d'analyser les différentes répartitions des artistes selon leur catégorie, leur genre musical et selon les plateformes de musique.</p>
+            <p><a class="btn btn-secondary" href="html/parallel-sets.html" role="button">Parallel sets &raquo;</a></p>
         </div>
     </div>
     <hr>
     <div class="row">
-        <div class="col-md-2">
-        </div>
-        <div class="col-md-4">
+        <div class="col-md-6">
             <h2>Visualisation 4</h2>
             <p class="text-justify">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
             <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-6">
             <h2>Visualisation 5</h2>
             <p class="text-justify">Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
             <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-        </div>
-        <div class="col-md-2">
         </div>
     </div>
 
